--- a/index.html
+++ b/index.html
@@ -9,23 +9,33 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Todo List</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <form class="form-inline my-2 my-lg-0 ml-auto">
+            <input id="todoName" class="form-control mr-sm-2" type="text" placeholder="Todo Name" aria-label="Todo Name">
+            <button class="btn btn-danger my-2 my-sm-0" type="button" onclick="todoEkle()">Ekle</button>
+          </form>
+        </div>
+      </nav>
 </head>
 <body onload="todolariCek()">
-    
-    <div class="kutu">
-        <span>Todo ismi girin : </span>
-        <input type="text" id="todoName">
-        <input type="button" value="Ekle" id="todoekle" onclick="todoEkle()">
-    </div>
-
-    <div class="kutu">
-        <h1>Todolar</h1>
-        <div id="todo-listem" class="kutu">
-            <!-- <li class="list-group-item d-flex justify-content-between">
-                Todo 1
-                <a href = "#" class ="delete-item">
-                    <i class = "fa fa-remove"></i>
-                </a> -->
+    <div class="container-fluid">
+        <h1>NAVBAR</h1>
+        <h1>My Todo List</h1>
+        <div id="todo-listem" class="container-fluid kutu">
+            <!-- <div id="todo-listem" class="kutu">
+                <li class="list-group-item d-flex justify-content-between">
+                    Todo 1
+                    <a href = "#" class ="delete-item">
+                        <i class = "fa fa-remove"></i>
+                    </a>
+            </div> -->
         </div>
     </div>
 
