--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ToDo List</title>
+    <title>My Todo List</title>
     <link rel="stylesheet" href="resources/css/style.css">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -16,20 +15,21 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse ml-5" id="navbarSupportedContent">
           <form class="form-inline my-2 my-lg-0 ml-auto">
+              
             <input id="todoName" class="form-control mr-sm-2" type="text" placeholder="Todo Name" aria-label="Todo Name">
-            <button class="btn btn-danger my-2 my-sm-0" type="button" onclick="todoEkle()">Ekle</button>
+            <button class="btn btn-danger my-2 my-sm-0" type="button" onclick="addTodo()">Add</button>
           </form>
         </div>
       </nav>
 </head>
-<body onload="todolariCek()">
+<body onload="getTodos()">
     <div class="container-fluid">
         <h1>NAVBAR</h1>
         <h1>My Todo List</h1>
-        <div id="todo-listem" class="container-fluid kutu">
-            <!-- <div id="todo-listem" class="kutu">
+        <div id="todo-list" class="container-fluid jumbotron">
+            <!-- <div id="todo-listem">
                 <li class="list-group-item d-flex justify-content-between">
                     Todo 1
                     <a href = "#" class ="delete-item">
