--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <form class="form-inline my-2 my-lg-0 ml-auto">
               
             <input id="todoName" class="form-control mr-sm-2" type="text" placeholder="Todo Name" aria-label="Todo Name">
+            <input id="todoDay" class="form-control mr-sm-2" type="text" placeholder="Day" aria-label="Day">
             <button class="btn btn-danger my-2 my-sm-0" type="button" onclick="addTodo()">Add</button>
           </form>
         </div>
@@ -32,13 +33,11 @@
             <div class="card text-center">
                 <div class="card-header"> <h1>My To-do List</h1> </div>
                 <div id="todo-list" class="card-body">
-                  <!-- <divs id="todo-listem">
-                              <li class="list-group-item d-flex justify-content-between">
+                  <!-- <li class="list-group-item d-flex justify-content-between card-body">
                                   Todo 1
                                   <a href = "#" class ="delete-item">
                                       <i class = "fa fa-remove"></i>
-                                  </a>
-                          </divs> -->
+                                  </a> -->
                 </div>
                 <div class="card-footer text-muted">
                     Project File : <a href="http://github.com/burakyzn/todo-list">GitHub</a>
