--- a/index.html
+++ b/index.html
@@ -27,22 +27,94 @@
 </head>
 <body onload="getTodos()">
     <h1>NAVBAR</h1>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
             <div class="card text-center">
                 <div class="card-header"> <h1>My To-do List</h1> </div>
                 <div id="todo-list" class="card-body">
-                  <!-- <li class="list-group-item d-flex justify-content-between card-body">
+                  <li class="list-group-item d-flex justify-content-between card-body">
                                   Todo 1
                                   <a href = "#" class ="delete-item">
                                       <i class = "fa fa-remove"></i>
-                                  </a> -->
+                                  </a>
                 </div>
                 <div class="card-footer text-muted">
                     Project File : <a href="http://github.com/burakyzn/todo-list">GitHub</a>
                 </div>
               </div>
+        </div>
+      </div>
+    </div> -->
+
+
+    <div class="container-fluid">
+      <div class="row">
+          <div class="col-lg-3" style="margin-top:10px;">
+              <div class="card" style="width: 18rem;">
+                <div class="card-img-top" style="text-align: center; font-size: 30px;">
+                  ?
+                  <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+                      <i class = "fa fa-remove"></i>
+                  </a>
+                </div>
+                <div class="card-body">
+                  <p class="card-text" style="text-align: center">TODO-NAME</p>
+                </div>
+              </div>
+            </div>
+        <div class="col-lg-3" style="margin-top:10px;">
+          <div class="card" style="width: 18rem;">
+            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+              ?
+              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+                  <i class = "fa fa-remove"></i>
+              </a>
+            </div>
+            <div class="card-body">
+              <p class="card-text" style="text-align: center">TODO-NAME</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3" style="margin-top:10px;">
+          <div class="card" style="width: 18rem;">
+            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+              ?
+              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+                  <i class = "fa fa-remove"></i>
+              </a>
+            </div>
+            <div class="card-body">
+              <p class="card-text" style="text-align: center">TODO-NAME
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3" style="margin-top:10px;">
+          <div class="card" style="width: 18rem;">
+            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+              ?
+              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+                  <i class = "fa fa-remove"></i>
+              </a>
+            </div>
+            <div class="card-body">
+              <p class="card-text" style="text-align: center">TODO-NAME</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3" style="margin-top:10px;">
+          <div class="card" style="width: 18rem;">
+            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+              ?
+              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+                  <i class = "fa fa-remove"></i>
+              </a>
+            </div>
+            <div class="card-body">
+              <p class="card-text" style="text-align: center">TODO-NAME</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
