--- a/index.html
+++ b/index.html
@@ -47,72 +47,71 @@
       </div>
     </div> -->
 
-
     <div class="container-fluid">
       <div class="row">
-          <div class="col-lg-3" style="margin-top:10px;">
+          <div class="col-lg-3 card-col">
               <div class="card" style="width: 18rem;">
-                <div class="card-img-top" style="text-align: center; font-size: 30px;">
+                <div class="card-img-top card-top">
                   ?
-                  <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+                  <a href = "#" class ="delete-item card-delete">
                       <i class = "fa fa-remove"></i>
                   </a>
                 </div>
                 <div class="card-body">
-                  <p class="card-text" style="text-align: center">TODO-NAME</p>
+                  <p class="card-text card-main">TODO-NAME</p>
                 </div>
               </div>
             </div>
-        <div class="col-lg-3" style="margin-top:10px;">
+        <div class="col-lg-3 card-col">
           <div class="card" style="width: 18rem;">
-            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+            <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+              <a href = "#" class ="delete-item card-delete">
                   <i class = "fa fa-remove"></i>
               </a>
             </div>
             <div class="card-body">
-              <p class="card-text" style="text-align: center">TODO-NAME</p>
+              <p class="card-text card-main">TODO-NAME</p>
             </div>
           </div>
         </div>
-        <div class="col-lg-3" style="margin-top:10px;">
+        <div class="col-lg-3 card-col">
           <div class="card" style="width: 18rem;">
-            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+            <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+              <a href = "#" class ="delete-item card-delete">
                   <i class = "fa fa-remove"></i>
               </a>
             </div>
             <div class="card-body">
-              <p class="card-text" style="text-align: center">TODO-NAME
+              <p class="card-text card-main">TODO-NAME
               </p>
             </div>
           </div>
         </div>
-        <div class="col-lg-3" style="margin-top:10px;">
+        <div class="col-lg-3 card-col">
           <div class="card" style="width: 18rem;">
-            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+            <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+              <a href = "#" class ="delete-item card-delete">
                   <i class = "fa fa-remove"></i>
               </a>
             </div>
             <div class="card-body">
-              <p class="card-text" style="text-align: center">TODO-NAME</p>
+              <p class="card-text card-main">TODO-NAME</p>
             </div>
           </div>
         </div>
-        <div class="col-lg-3" style="margin-top:10px;">
+        <div class="col-lg-3 card-col">
           <div class="card" style="width: 18rem;">
-            <div class="card-img-top" style="text-align: center; font-size: 30px;">
+            <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item" style="float: right; margin-right: 10px;">
+              <a href = "#" class ="delete-item card-delete">
                   <i class = "fa fa-remove"></i>
               </a>
             </div>
             <div class="card-body">
-              <p class="card-text" style="text-align: center">TODO-NAME</p>
+              <p class="card-text card-main">TODO-NAME</p>
             </div>
           </div>
         </div>
