--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </nav>
 </head>
-<body onload="getTodos()">
+<body>
     <h1>NAVBAR</h1>
     <!-- <div class="container-fluid">
       <div class="row">
@@ -48,14 +48,11 @@
     </div> -->
 
     <div class="container-fluid">
-      <div class="row">
+      <div class="row" id="todo-list">
           <div class="col-lg-3 card-col">
               <div class="card" style="width: 18rem;">
                 <div class="card-img-top card-top">
                   ?
-                  <a href = "#" class ="delete-item card-delete">
-                      <i class = "fa fa-remove"></i>
-                  </a>
                 </div>
                 <div class="card-body">
                   <p class="card-text card-main">TODO-NAME</p>
@@ -66,9 +63,6 @@
           <div class="card" style="width: 18rem;">
             <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item card-delete">
-                  <i class = "fa fa-remove"></i>
-              </a>
             </div>
             <div class="card-body">
               <p class="card-text card-main">TODO-NAME</p>
@@ -79,9 +73,6 @@
           <div class="card" style="width: 18rem;">
             <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item card-delete">
-                  <i class = "fa fa-remove"></i>
-              </a>
             </div>
             <div class="card-body">
               <p class="card-text card-main">TODO-NAME
@@ -93,9 +84,6 @@
           <div class="card" style="width: 18rem;">
             <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item card-delete">
-                  <i class = "fa fa-remove"></i>
-              </a>
             </div>
             <div class="card-body">
               <p class="card-text card-main">TODO-NAME</p>
@@ -106,9 +94,6 @@
           <div class="card" style="width: 18rem;">
             <div class="card-img-top card-top">
               ?
-              <a href = "#" class ="delete-item card-delete">
-                  <i class = "fa fa-remove"></i>
-              </a>
             </div>
             <div class="card-body">
               <p class="card-text card-main">TODO-NAME</p>
