--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </nav>
 </head>
-<body>
+<body onload="getTodos()">
     <h1>NAVBAR</h1>
     <!-- <div class="container-fluid">
       <div class="row">
