--- a/index.html
+++ b/index.html
@@ -20,41 +20,10 @@
               
             <input id="todoName" class="form-control mr-sm-2" type="text" placeholder="Todo Name" aria-label="Todo Name">
             <select id="todoDay" class="form-control mr-sm-2">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>
-              <option value="11">11</option>
-              <option value="12">12</option>
-              <option value="13">13</option>
-              <option value="14">14</option>
-              <option value="15">15</option>
-              <option value="16">16</option>
-              <option value="17">17</option>
-              <option value="18">18</option>
-              <option value="19">19</option>
-              <option value="20">20</option>
-              <option value="21">21</option>
-              <option value="22">22</option>
-              <option value="23">23</option>
-              <option value="24">24</option>
-              <option value="25">25</option>
-              <option value="26">26</option>
-              <option value="27">27</option>
-              <option value="28">28</option>
-              <option value="29">29</option>
-              <option value="30">30</option>
-              <option value="31">31</option>
             </select>
             <select id="todoMonth" class="form-control mr-sm-2">
             </select>
-            <input id="todoYear" class="form-control mr-sm-2" type="text" placeholder="2019" value="2019">
+            <input id="todoYear" class="form-control mr-sm-2" type="text" value="2019">
             <button class="btn btn-danger my-2 my-sm-0" type="button" onclick="addTodo()">Add</button>
           </form>
         </div>
