--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             </select>
             <select id="todoMonth" class="form-control mr-sm-2">
             </select>
-            <input id="todoYear" class="form-control mr-sm-2" type="text" value="2019">
+            <select id="todoYear" class="form-control mr-sm-2">
+            </select>
             <button class="btn btn-danger my-2 my-sm-0" type="button" onclick="addTodo()">Add</button>
           </form>
         </div>
