--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </nav>
 </head>
-<body onload="getTodos()">
+<body>
     <h1>NAVBAR</h1>
 
     <div class="container-fluid">
